--- a/zarf/k8s/kind/moneyflow-pod/kustomization.yaml
+++ b/zarf/k8s/kind/moneyflow-pod/kustomization.yaml
@@ -1,10 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- ./kind-moneyflow-config.yaml
 - ../../base/moneyflow-pod/
 patchesStrategicMerge:
 - ./kind-moneyflow-patch.yaml
 images:
+- name: metrics-image
+  newName: metrics-amd64
+  newTag: "1.0"
+- name: openzipkin
+  newName: openzipkin/zipkin
+  newTag: "2.23"
 - name: moneyflow-api-image
   newName: moneyflow-api-amd64
   newTag: "1.0"
